inventory-api/k8s/overlays/dev/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: inventory-api-route
  namespace: inventory
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: main-gateway
    namespace: default
  hostnames:
  - gateway.intelliantech.com
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /inventory
    filters:
    - type: URLRewrite
      urlRewrite:
        path:
          type: ReplacePrefixMatch
          replacePrefixMatch: /
    - type: RequestHeaderModifier
      requestHeaderModifier:
        set:
        - name: X-Forwarded-Prefix
          value: /inventory
    backendRefs:
    - name: inventory-api-svc
      port: 80
      weight: 1
